# chinook_system

./: README.md  answer.sql  create_view.sql  readme.txt
chinook_system/: Chinook_Sqlite.sqlite  chinook_server
chinook_system/website/: index.html  intro.html
chinook_system/website/static/css/: style.css
chinook_system/website/static/js/: config.js  database.js  flare-2.json.js  main.js  test.js  view.js
chinook_system/website/static/layui-v2.5.6/layui/lay/modules/: table.js
server/: CMakeLists.txt  build.sh  main.cpp
server/cmake/: FindSQLite3.cmake
